[package]
authors = ["Vinzent Steinberg <Vinzent.Steinberg@gmail.com>"]
name = "discrete-log"
version = "0.0.3"

[dependencies]
num-traits = "0.2"
ramp = "0.3.11"
rust-gmp = "0.5"

[dependencies.num-bigint]
default-features = false
version = "0.1"

[dependencies.rug]
default-features = false
features = ["integer"]
version = "0.9"
