[package]
authors = ["Vinzent Steinberg <Vinzent.Steinberg@gmail.com>"]
name = "discrete-log"
version = "0.0.3"

[dependencies]
num-traits = "0.2"
rust-gmp = "0.5"

[dependencies.ramp]
version = "0.5.2"

[dependencies.num-bigint]
version = "0.2"

[dependencies.rug]
default-features = false
features = ["integer"]
version = "1"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "mulmod"
harness = false
