[package]
authors = ["Vinzent Steinberg <Vinzent.Steinberg@gmail.com>"]
name = "discrete-log"
version = "0.0.3"
edition = "2018"

[dependencies]
num-traits = "0.2"

[dependencies.rust-gmp]
version = "0.5"
optional = true

[dependencies.ramp]
version = "0.5.2"

[dependencies.num-bigint]
version = "0.4"

[dependencies.rug]
default-features = false
features = ["integer"]
version = "1"
optional = true

[dependencies.ibig]
version = "0.2"

[features]
gmp = ["rust-gmp"]
# rug = ["dep:rug"]

[dev-dependencies.criterion]
version = "0.3"
features = ["html_reports"]

[[bench]]
name = "mulmod"
harness = false
